assets/css/media.css
/* ... */
.contactRegionModule__image {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
  object-fit: cover;
  border-radius: 12px;
}

.contactRegionModule__textWrap {
  grid-column: 7/-1;
}

@media (max-width: 949.98px) {
  .contactRegionModule__textWrap {
    grid-column-start: 4;
  }
}

@media (max-width: 743.98px) {
  .contactRegionModule__textWrap {
    grid-column: 1/-1;
  }
}

.contactRegionModule__title {
  font-size: 32px;
  line-height: 1.125;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  margin-top: 32px;
}

@media (max-width: 743.98px) {
  .contactRegionModule__title {
    font-size: 26px;
    line-height: 1.30769;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    margin-top: 24px;
    margin-bottom: 16px;
  }
}

.contactRegionModule__text {
  font-size: 18px;
  line-height: 1.33333;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

@media (min-width: 950px) {
  .contactRegionModule__text {
    -webkit-columns: 2;
    column-count: 2;
    -webkit-column-gap: 16px;
    column-gap: 16px;
  }
}

@media (max-width: 743.98px) {
  .contactRegionModule__text {
    font-size: 16px;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
  }

  .contactRegionModule__text > :last-child {
    margin-bottom: 0;
  }
}

@media (min-width: 744px) {
  .contactRegionModule__text > p {
    margin-bottom: 32px;
  }
}

.mediaAssetsIndex__cont {
  margin-top: 80px;
  margin-bottom: 32px;
}

@media (max-width: 949.98px) {
  .mediaAssetsIndex__cont {
    margin-bottom: 48px;
  }
}

@media (max-width: 743.98px) {
  .mediaAssetsIndex__cont {
    margin-top: 48px;
    margin-bottom: 24px;
  }
}

.mediaAssetsIndex__asset {
  font-size: 22px;
  line-height: 1.36364;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  position: relative;
  margin-bottom: 48px;
  font-weight: 500;
}

@media (max-width: 1439.98px) {
  .mediaAssetsIndex__asset {
    font-size: 18px;
    line-height: 1.33333;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
  }
}

@media (max-width: 949.98px) {
  .mediaAssetsIndex__asset {
    margin-bottom: 32px;
  }
}

@media (max-width: 743.98px) {
  .mediaAssetsIndex__asset {
    font-size: 14px;
    line-height: 1.28571;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    margin-bottom: 24px;
  }
}

@media (max-width: 374.98px) {
  .mediaAssetsIndex__asset {
    grid-column: span 2;
  }
}

.mediaAssetsIndex__asset:focus,
.mediaAssetsIndex__asset:hover {
  text-decoration: underline;
}

.mediaAssetsIndex__assetImgWrap {
  height: 0;
  position: relative;
  margin-bottom: 16px;
  padding-bottom: 66.6666%;
  border-radius: 12px;
  overflow: hidden;
  -webkit-transform: translateZ(0);
  transform: translateZ(0);
}

@media (max-width: 743.98px) {
  .mediaAssetsIndex__assetImgWrap {
    margin-bottom: 12px;
  }
}

.mediaAssetsIndex__assetImgWrap img {
  position: absolute;
  display: block;
  width: 100%;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -o-transform: translateY(-50%);
  transform: translateY(-50%);
  -o-object-fit: cover;
  object-fit: cover;
}

.mediaAssetsIndex__link {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.filters__title {
  font-size: 18px;
  line-height: 1.22222;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  margin-bottom: 32px;
  font-weight: 500;
}

@media (max-width: 1127.98px) {
  .filters__title {
    margin-bottom: 24px;
  }
}

@media (max-width: 743.98px) {
  .filters__title {
    display: none;
  }
}

.filters__cont {
  position: relative;
}

@media (min-width: 744px) {
  .filters__cont:after {
    content: '';
    position: absolute;
    top: 0;
    right: 16px;
    width: 1px;
    height: 100%;
    background-color: #ddd;
  }
}

@media (min-width: 744px) and (min-width: 950px) {
  .filters__cont:after {
    right: calc(12.5% - 6px);
  }
}

@media (max-width: 743.98px) {
  .filters__cont {
    -webkit-box-ordinal-group: 3;
    -ms-flex-order: 2;
    order: 2;
    margin-top: 48px;
  }
}

@media (min-width: 950px) {
  .filters__contInner {
    width: calc(75% - 4px);
  }
}

@media (max-width: 949.98px) {
  .filters__contInner {
    margin-right: 48px;
  }
}

@media (max-width: 743.98px) {
  .filters__contInner {
    margin-right: 0;
  }
}

.filters__inquiry {
  font-size: 18px;
  line-height: 1.55556;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
  color: #000;
}

@media (max-width: 1439.98px) {
  .filters__inquiry {
    font-size: 16px;
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
  }
}

@media (max-width: 1127.98px) {
  .filters__inquiry {
    font-size: 14px;
    line-height: 1.42857;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
  }
}

.filters__section {
  padding-bottom: 48px;
  margin-bottom: 48px;
  border-bottom: 1px solid #ddd;
}

@media (max-width: 949.98px) {
  .filters__section {
    padding-bottom: 32px;
    margin-bottom: 32px;
  }
}

@media (max-width: 743.98px) {
  .filters__section {
    display: none;
  }
}
/* ... */

